Changelog
=========

2.9-dev0 - (unreleased)
---------------------------

2.8 - (2022-09-07)
---------------------------
* Change: Removed Clonable content type, refs #153055
  [alecghica]

2.7 - (2022-09-06)
---------------------------
* Change: Remove compositepage content type
  [alecghica]

2.6 - (2022-07-05)
---------------------------
* Change: Move visualization logic to eea.api.dataconnector
  [razvanMiu]

2.5 - (2022-03-14)
---------------------------
* Bug fix: fix to1003 upgrade step
  [valipod]

2.4 - (2022-02-25)
---------------------------
* Change: Bug fix: handle the blocks attribute to be None [erral]
  [avoinea]

2.3 - (2022-02-02)
---------------------------
* Change: Added api for fetching visualization & visualization layout
  [razvanMiu]

2.2 - (2021-11-17)
---------------------------
* Change: eea.api.dataconnector
  [tripon.eugen]
* Change: Fix resolveuid
  [razvanMiu]
* Change: Make it work with Plone 6 / pip install
  [avoinea refs #139557]

2.1 - (2021-11-03)
---------------------------
* Change: Removed SerializeSiteRootToJson -> use the serializer from plone.restapi
  [razvanMiu]

2.0 - (2021-10-06)
---------------------------
* Change: Fix interface for data_query field
  [razvanMiu]

1.9 - (2021-09-29)
---------------------------
* Reinstate porlets service from older plone.restapi
  [razvanMiu]

1.8 - (2021-09-22)
---------------------------
* Change: remove dependency on eea.volto.slate [valipod]
* Change: add minimum version on plone.restapi [valipod]

1.7 - (2021-09-16)
---------------------------
* Change: Collection fullobject
  [razvanMiu]

1.6 - (2021-06-29)
---------------------------
* Change: Develop #135777
  [alecghica]

1.5 - (2021-05-07)
---------------------------
* Move Discodata connector adapter to eea.api.dataconnector
  [tiberiuichim, razvanMiu]

1.4 - (2020-05-13)
---------------------------
* Change: Tests and Linters
  [valipod]

1.3 - (2020-03-03)
---------------------------