@@ -3,6 +3,9 @@ Changelog
 
 2.9-dev0 - (unreleased)
 ---------------------------
+* Change: removed "Discodata Connector" and "Visualization". 
+  This content types will be registered by "eea.api.dataconnector" add-on.
+  [alecghica refs #153056]
 
 2.8 - (2022-09-07)
 ---------------------------
